<resources>
    <string name="app_name">Jackson-Layouts</string>
    <string name="i_ve_forgotten_my_password">I\'ve forgotten my password?</string>
    <string name="log_in">Log in</string>
    <string name="or">or</string>
    <string name="simple_mobile_chat_and_notes">Simple mobile chat and notes</string>
    <string name="register">Register</string>
    <string name="chatt">Chatt</string>
    <string name="title">Title</string>
    <string name="enter_title">Enter Title</string>
    <string name="status">Status</string>
    <string name="done">Done</string>
    <string name="priorit">Priorit:</string>
    <string name="not_done">Not done</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="time_and_date">Time and Date</string>
    <string name="_2014_02_13">2014-02-13</string>
    <string name="_17_52_00">17:52:00</string>
    <string name="choose_date">Choose Date</string>
    <string name="choose_time">Choose Time</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="o_po_o_dublado">O Poço(Dublado)</string>
    <string name="_2019_1h_34minutos">2019 1H 34minutos</string>
    <string name="fic_o_cient_fica_terror">Ficção científica/Terror</string>
    <string name="r_19_99">R$:19,99</string>
    <string name="o_po_o_conta_a_hist_ria_de_um_lugar_misterioso_uma_pris_o_indescrit_vel_um_buraco_profundo_dois_reclusos_que_vivem_em_cada_n_vel_um_n_mero_desconhecido_de_n_veis_uma_plataforma_descendente_contendo_comida_para_todos_eles">O Poço conta a história de um lugar misterioso, uma prisão indescritível, um buraco profundo. Dois reclusos que vivem em cada nível. Um número desconhecido de níveis. Uma plataforma descendente contendo comida para todos eles.</string>
    <string name="vale_muito_a_pena_mas_n_o_um_filme_para_todos_filme_com_cenas_fortes_para_quem_tem_est_mago_fraco_um_filme_para_ser_interpretado_e_n_o_simplesmente">Vale muito a pena, mas não é um filme para todos, filme com cenas fortes para quem tem estômago fraco.Um filme para ser interpretado e não simplesmente</string>
    <string name="_24_de_mar_o_de_2020">24 de março de 2020</string>
    <string name="um_usuario_do_google">Um usuario do Google</string>
    <string name="time">Time</string>
    <string name="_1_07_am">1:07 AM</string>
    <string name="dasdadsadasdsadasdasdas">dasdadsadasdsadasdasdas</string>
    <string name="comentarios">Comentarios</string>
    <string name="todo">TODO</string>
</resources>
